static pages added to

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,7 +4,7 @@
     <a href="<%= project_url  %>">Walk In EMR</a> project 
   </h1>
 
-  Walk-In EMR web app is no-frills electronic medical records solution created to replace now defunct, functionally similar package from Health Screen Solutions.  
+  Walk-In EMR web app is electronic medical records solution created to replace now defunct, functionally similar package from Health Screen Solutions.  
   Built using Ruby on Rails with Postgres SQL back end, Walk-In EMR is easy to use, tailored to busy walk-in clinic setting, and provides all basic functions of any EMR system including:
   <p>
 
