--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,8 @@
 9 AM to 1 PM, on Saturdays
 9 AM to 2 PM, Sundays & Holidays
 
+Please make sure to arrive half an hour before closing time.
+
 Doctors’ Schedules
 
 <b>Dr. Smith:</b>
