--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -5,7 +5,12 @@
 
 	<div class="panel panel-default">
 		<div class="panel-body news-panel-body">
-
+			
+			<li> PDF documents can now be attached to the visit. Amazon S3 cloud service is used for storage.</li>
+			<li> Validation added to allow only 1 visit per patient per day</li>
+			<li> Delete links removed from day sheet - use "cancelled" status instead</li>
+			<li> Validation added for visits requiring diagnosis </li>
+			<li> date/time input added for new visits</li>
 			<li> Logout link moved down to footer </li>
 			<li> Pdf Reports are now generated right after creation and downloaded to client; No intermediate Show Report step </li>
 			<li> Pay stubs are now generated in <b>Docs>Paystubs</b> if new RA file was processed and paid claims imported for the latest billing cycle </li>
