--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -26,10 +26,21 @@
 	  <%= visit.status_str %>
 	<% end %>
 	</td>
+	
+	<% remote = device_type == 'desktop' %>
+	
 	<% if @date == Date.today || @date.blank? %>
-	  <td> <%= link_to "Label", label_patient_path(pat), method: 'get', target: "Label" %> </td>
-	  <td> <%= link_to "Form", visitform_patient_visit_path(pat,visit), method: 'get', target: "Form" %> </td>
-	  <td> <%= link_to "Edit",  edit_patient_visit_path(pat,visit) %> </td>
+	<td><%= link_to "Label", label_patient_path(pat), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %></td>
+
+  <div id="modal-window" class="modal fade printable autoprint" role="document" aria-labelledby="ModalLabel" aria-hidden="true">
+    <div class="modal-dialog " role="dialog">
+      <div class="modal-content"></div>
+    </div>
+  </div>
+	  
+	  <td><%= link_to "Form", visitform_patient_visit_path(pat,visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get'  %></td>
+
+	  <td> <%= link_to "Edit",  edit_patient_visit_path(pat,visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get' %> </td>
         <% else %>	
 	  <td> <%= link_to "Label", label_patient_path(pat), method: 'get', target: "Label" %> </td>
 	<% end %>
