--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -145,7 +145,7 @@
   </div>
 
   <div class="col-sm-10 col-md-8">
-  <%= f.text_field :medications, placeholder: :Medications %>
+  <%= f.text_area :medications, rows:2, placeholder: :Medications %>
   </div>
 </div>
 
