--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -48,7 +48,7 @@
 <% if @visit.notes.present? %>
 <div class="panel panel-info">
    <div class="visit-notes-panel-body">
-<b>Notes </b>: <%= @visit.notes %>	     
+<b>Notes </b>: <%= @visit.notes.html_safe %>	     
    </div>
 </div>
 <% end %>
@@ -64,16 +64,23 @@
  </div>
  <% end %>
 
+<% remote = device_type == 'desktop' %>
+<div class="col-sm-3 col-md-2">
+<%= button_to "Visit Form", visitform_patient_visit_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  class:"btn btn-primary clickable", method: 'get'  %>
+<div id="modal-window" class="modal fade modal-lg printable autoprint" role="document" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="dialog">
+    <div class="modal-content"></div>
+  </div>
+</div>
+</div>
+
  <div class="col-sm-3 col-md-2">
- <%= button_to "Print Visit Form", visitform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "Form"  %>
- </div>
- <div class="col-sm-3 col-md-2">
- <%= button_to "Print Referral Form", referralform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "Form"  %>
+ <%= button_to "Referral Form", referralform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "Form"  %>
  </div>
 
  <% if @visit.cash? %> 
  <div class="col-sm-3 col-md-2">
- <%= button_to "Print Receipt", receipt_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "Receipt"  %>
+ <%= button_to "Receipt", receipt_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "Receipt"  %>
  </div>
  <% end %>
  
@@ -82,6 +89,10 @@
  <%= button_to "Send to Cab.md", sendclaim_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
  </div>
  <% end %>
+
+ <div class="col-sm-3 col-md-2">
+ <%= button_to "Back To Patient", patient_path(@patient), class: "btn btn-primary", method: 'get'  %>
+ </div>
 
 </div>
 </div>
