striped table hlight color, age in days/m/y; daysheet shows all statuses now for today

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -318,6 +318,10 @@ input {
   background: lightblue;
 }
 
+.table-hover tbody tr:hover td {
+    background: #5bc0de;
+}
+
 /* Pagination */
 
 .pagination {
