--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -154,11 +154,11 @@
   <%= f.text_field :pulse %>
   </div>
   <div class="col-sm-2">
-  <%= f.label "Blood Pr H/L" %>
+  <%= f.label "BP (H/L)" %>
   <%= f.text_field :bp %>
   </div>
   <div class="col-sm-2">
-  <%= f.label "Weight (kg)" %>
+  <%= f.label "Weight" %>
   <%= f.text_field :weight %>
   </div>
 </div>
