set doctor moved to header

--- a/app/views/daysheet/_set_doctor.html.erb
+++ b/app/views/daysheet/_set_doctor.html.erb
@@ -1,6 +1,6 @@
-<div style="height: 100px;"> </div>
-<div class="col-md-2 col-sm-4 col-sm-offset-4"> 
 <%= form_with url: daysheet_index_path do |f| %>
-	<%= f.collection_select(:doc_id, get_active_doctors, :id, :lname, {prompt: 'Please assign doctor for this shift'}, {onchange: "this.form.submit()"} ) %>
+	<% doc_id = current_doctor.id rescue nil %>
+	<div class="form-group col-sm-4 col-md-2 col-sm-offset-2 col-md-offset-1">
+		<%= f.collection_select(:doc_id, get_active_doctors, :id, :lname, {prompt: 'Doctor'},  {onchange: "this.form.submit()"} ) %>
+	</div>
 <% end %>
-</div>
