--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,6 +17,7 @@ $gray-medium-light: #eaeaea;
 html,body {
   height: 100%;
   padding-top: 0; 
+  overflow-y: scroll;
 }
 
 .container {
@@ -25,6 +26,8 @@ html,body {
    height: auto !important; /* Stick footer to bottom in IE6 */
    height: 100%;
    margin: 0 auto -30px;  /* footer height */
+   padding-left: 5px;
+   padding-right: 5px;
  /*  vertical-align: bottom; */
 }
 
@@ -51,6 +54,8 @@ table {
 .navbar-inverse {
 //    background-color: #333;
     border-color: #E7E7E7;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .navbar-inverse .navbar-nav > .active > a,
@@ -134,9 +139,9 @@ td.hlight {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: white;
+  color: grey;
   text-transform: uppercase;
-  letter-spacing: -1px;
+  letter-spacing: -2px;
   padding-top: 9px;
   font-weight: bold;
   &:hover {
@@ -188,6 +193,7 @@ footer {
   justify-content:flex-end;
   align-items:center; 
   padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 /* sidebar */
@@ -369,6 +375,17 @@ input {
   padding:0px 15px;
 }
 
+.alert-success{
+    color: green;
+}
+.alert-danger{
+  color: red;
+  font-size: 1em;
+  height: 30px;
+  line-height:30px;
+  padding:0px 15px;
+}
+
 .hdr-link {
  color: white;
 }
@@ -448,7 +465,7 @@ table.pretty {
 #modal-window {
   position: fixed;
   top: 6%;
-  left: 15%;
+  left: 5%;
 //  transform: translate(-50%, -50%);
 }
 
