--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:ddanger] %>
+<p class="alert-danger"><%= flash[:danger] %></p>
+<% end %>
+
 <%= form_for (@patient) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
