--- a/app/views/patients/new.js.erb
+++ b/app/views/patients/new.js.erb
@@ -1,5 +1,7 @@
 //alert ("new.js.erb called <%= @patient.full_name %>");
 
-$('#result').html("<h2><%= flash[:info] %><font color=red> <%= flash[:danger] %> </font></h2><%= j render 'form' %>");
+
+//$('#result').html("<h4><%= flash[:info] %><font color=red> <%= flash[:danger] %> </font></h4><%= j render 'form' %>");
+$('#result').html("<h2>New Patient Sign up</h2> <%= j render 'form' %>");
 $('#page').hide();
 $('.alert').hide();
