--- a/app/views/visits/_edit.html.erb
+++ b/app/views/visits/_edit.html.erb
@@ -8,7 +8,7 @@
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %> Visit <%= @visit.entry_ts %></b>
+	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %>: Visit of <%= @visit.entry_ts %></b>
 </div>
 <div class="modal-body">
        <%= render 'form' %>
