set doctor flash, popup window position

--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -26,12 +26,12 @@
 	  <% end %>	
           </th>
 
-          <th class="tbl_lmd">Patient</th>
+	  <th class="tbl_lmd">Patient</th>
           <th class="tbl_sm">Type</th>
           <th class="tbl_md">HC/IFH #</th>
-          <th class="tbl_lsm">Diagnosis</th>
+          <th class="tbl_lsm">Diag.</th>
           <th class="tbl_md">Services</th>
-          <th class="tbl_sm">B.Types</th>
+          <th class="tbl_sm">B.Typ</th>
           <th class="tbl_lsm">Status</th>
 	  <% if date == Date.today || date.blank? %>
 	    <th class="tbl_sm"></th>
