--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -464,7 +464,7 @@ table.pretty {
 
 #modal-window {
   position: fixed;
-  top: 6%;
+  top: 3%;
   left: 5%;
 //  transform: translate(-50%, -50%);
 }
@@ -487,7 +487,7 @@ table.pretty {
     height: 22px !important;
 }
 
-// Safari modals - doesnt really work
+// Safari modals - doesnt really work, but maybe one day..
 .clickable {
 cursor: pointer;
 }
