--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,7 +1,7 @@
-
 <div id='result'></div>
 
 <% provide(:title, 'All patients') %>
+<%= render 'shared/modal' %>
 
 <div id="page">
 <table class="tbl table-hover"> <!--class="table table-hover table-condensed" > -->
