--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -5,7 +5,11 @@
 
 	<div class="panel panel-default">
 		<div class="panel-body news-panel-body">
-			
+			<li> End of day reports can only be generated when billing is done </li> 
+			<li> Doctor selection drop-down moved to the header. Sticky until changed </li>
+			<li> No new visits for Deceased patients </li>
+			<li> Card swipe now works in both daysheet and patients pages </li>
+			<li> Pop-ups are phased in instead of tabs throughout </li>			
 			<li> PDF documents can now be attached to the visit. Amazon S3 cloud service is used for storage.</li>
 			<li> Validation added to allow only 1 visit per patient per day</li>
 			<li> Delete links removed from day sheet - use "cancelled" status instead</li>
