--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,19 +1,24 @@
     <tr>
-	<% if report.filespec.blank? %>
-          <td><%= link_to report.id, report  %> </td>
- 	<% else %>
-          <td><%= link_to report.id, show_pdf_report_path(report), target: 'Form' %> </td>
-  	<% end %>
-	<td><%= REPORT_TYPES.invert[report.rtype] %></td>
 	<td><%= report.doctor.lname rescue 'All' %> </td> 
-	<td><%= REPORT_TFRAMES.invert[report.timeframe] %></td> 
-	<td><%= report.sdate %></td>
+	<td><%= report.name %> </td>
+	<% if File.exists?(report.filespec) %>
+<!-- link_to report.name, show_pdf_report_path(report), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window' -->
+	  <td><%= link_to 'Download', show_pdf_report_path(report)  %></td>
+	  <td><%= report.filesize %> </td>
+	<% else %>
+	  <td>Missing</td>
+	  <td></td>
+  	<% end %>
+
+	<td><%= report.type_str %></td>
+	<td><%= report.timeframe_str %></td> 
 	<td>
-	<% if report.timeframe.present? && report.timeframe > DAILY_REPORT %>
-	<%= report.edate %>
+	<% if report.timeframe == DAILY_REPORT %>
+		<%= "#{report.sdate}" %>
+	<% else %>
+	   <%= "#{report.sdate} - #{report.edate}" %>
 	<% end %>
 	</td>
-	<td><%= report.filename %></td>
 
   	<% if current_user.admin?  %>
 		<td> <%= link_to "delete", report, method: :delete, data: { confirm: "Are you sure you want to delete #{report.name}?" } %> </td>
