--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,15 +1,17 @@
 <% provide(:title, 'All Reports') %>
 
+<%= render 'shared/modal' %>
+
 <table class="tbl table-hover">  <!--table table-hover table-condensed" >  -->
   <thead>
       <tr>
-          <th>Report#</th>
-          <th>Type</th>
           <th>Doctor</th>
+          <th>Report</th>
+          <th>Link</th>
+	  <th>Size </th>
+          <th>Type</th>
           <th>Timeframe</th>
           <th>Date</th>
-          <th>To</th>
-          <th>File</th>
 	   <% if current_user.admin?  %>
           <th></th>
 	  <% end %>
