--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -38,12 +38,15 @@
 </table>
 <% end %>
 
+<%  remote = device_is_desktop? %>
+<%= render 'shared/modal', size: 'lg' %>
+
 <div class="bottom_buttons ">
     <%= will_paginate @visits, class: "btn" %>
     <% if @report.filespec.blank? %> 
        <%= button_to "Generate PDF", export_report_path, class: "btn btn-primary", :method => "get", formtarget: "Form" %>
     <% else %>
-       <%= button_to "Show PDF", show_pdf_report_path, class: "btn btn-primary", :method => "get", formtarget: "Form" %>
+       <%= button_to "Show PDF", show_pdf_report_path(@report), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-primary clickable", :method => "get" %>
     <% end %>
 </div>
 
