--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,7 +1,8 @@
     <tr>
+	<td><%= report.id %></td>
 	<td><%= report.doctor.lname rescue 'All' %> </td> 
 	<td><%= report.name %> </td>
-	<% if File.exists?(report.filespec) %>
+	<% if report.filespec.present? && File.exists?(report.filespec) %>
 <!-- link_to report.name, show_pdf_report_path(report), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window' -->
 	  <td><%= link_to 'Download', show_pdf_report_path(report)  %></td>
 	  <td><%= report.filesize %> </td>
