--- a/app/views/patients/_addrlabel.html.erb
+++ b/app/views/patients/_addrlabel.html.erb
@@ -3,7 +3,7 @@
 	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %>  - Address Label</b>
 </div>
 <div class="modal-body">
-        <embed class="center" src="/addrlabel.pdf" width=100%  height=260px frameborder="0" > 
+        <embed class="center" src="/uploads/addrlabel.pdf" width=100%  height=260px frameborder="0" > 
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
