--- a/app/views/patients/_label.html.erb
+++ b/app/views/patients/_label.html.erb
@@ -2,8 +2,8 @@
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
 </div>
 <div class="modal-body">
-	<!-- embed src="/label.pdf" frameborder="0" width="100%" height="180px" -->
-        <embed class="center" src="/label.pdf" width=100%  height=260px frameborder="0" > 
+	<!-- embed src="/uploads/label.pdf" frameborder="0" width="100%" height="180px" -->
+        <embed class="center" src="/uploads/label.pdf" width=100%  height=260px frameborder="0" > 
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
