--- a/app/views/reports/_show_pdf.html.erb
+++ b/app/views/reports/_show_pdf.html.erb
@@ -8,7 +8,7 @@
 	<b class="modal-title" id="myModalLabel"><%= @doctor.lname %>: Claims Report for <%= @report.sdate %></b>
 </div>
 <div class="modal-body">
-	<embed id="myModal" src="/doc_report.pdf" frameborder="0" width="100%" height="600px">
+	<embed id="myModal" src="/uploads/doc_report.pdf" frameborder="0" width="100%" height="600px">
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
