--- a/app/views/visits/_visitform.html.erb
+++ b/app/views/visits/_visitform.html.erb
@@ -3,7 +3,7 @@
 	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %>  - Visit Form</b>
 </div>
 <div class="modal-body">
-  <embed src="/visitform.pdf" frameborder="0" width="100%" height="600px">
+  <embed src="/uploads/visitform.pdf" frameborder="0" width="100%" height="600px">
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
