--- a/app/views/visits/_visit.html.erb
+++ b/app/views/visits/_visit.html.erb
@@ -1,10 +1,15 @@
-
 <tr>
   <td><%= link_to visit.entry_ts, patient_visit_path(@patient,visit) %> </td>
+  <td>
+  <% if remote %>
+     <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %> </td>
+  <% else %>
+     <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_patient_visit_path(@patient,visit) %>
+  <% end %>
+  </td>
   <td><%= visit.doctor.lname %></td>
   <td><%= visit.diag_scode %></td>
   <td><%= visit.proc_codes %></td>
   <td><%= visit.status_str %></td>
-  <td><%= visit.billing_ref %></td>
 </tr>
 
