--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -1,11 +1,12 @@
 <% pat = Patient.find(visit.patient_id) rescue nil %>
-<% return unless pat.present? %>
+<% remote = device_is_desktop? %>
 <tr>
 	<% if visit.date == @date %>
             <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(pat,visit) %></td>
          <% else %>
             <td><%= link_to visit.entry_ts, patient_visit_path(pat,visit) %></td>
          <%end %>
+
 	<td><%= visit.doctor.lname %></td>
 	<td><%= link_to pat.full_name, pat %></td>
 	<td><%= pat.pat_type %></td>
@@ -26,18 +27,20 @@
 	  <%= visit.status_str %>
 	<% end %>
 	</td>
-
-	<% remote = device_is_desktop? %>
+	  
+	 <% remote = device_is_desktop? %>
 	
 	<!-- #modal-window is defined in index -->	
+	<td><%= link_to '<i class="glyphicon glyphicon-credit-card"></i>'.html_safe, label_patient_path(pat), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %></td>
 	<% if @date == Date.today || @date.blank? %>
-	<td><%= link_to "Label", label_patient_path(pat), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %></td>
-
-	  <td><%= link_to "Form", visitform_patient_visit_path(pat,visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get'  %></td>
-
-	  <td> <%= link_to "Edit",  edit_patient_visit_path(pat,visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get' %> </td>
-        <% else %>	
-	  <td> <%= link_to "Label", label_patient_path(pat), method: 'get', target: "Label" %> </td>
+	  <td><%= link_to '<i class="glyphicon glyphicon-file"></i>'.html_safe, visitform_patient_visit_path(pat,visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get'  %></td>
+	  <td>
+	  <% if remote %>
+	    <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_patient_visit_path(pat,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
+          <% else %>
+	    <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_patient_visit_path(pat,visit) %>
+          <% end %>
+	  </td>
 	<% end %>
 	<% if current_user.admin? %>
 	    <td><%= link_to "Delete", patient_visit_path(pat,visit), method: :delete, data: { confirm: "Are you sure you want to delete visit #{visit.id} for patient #{pat.lname}?" } %> </td>
