--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -17,8 +17,8 @@
 	  <th>Expiry</th> 
 	  <th>DOB</th> 
           <th>Phone</th>
-          <th class="tbl_sm">Chart</th>
- 	  <th></th>
+ 	  <th class="tbl_sm">Lbl</th>
+          <th class="tbl_sm"></th>
 	  <%=  "<th></th>".html_safe if current_user.admin? %>
       </tr>
   </thead>
