--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -9,7 +9,7 @@
 <table class="tbl table-hover" >
   <thead>
       <tr>
-	  <th class="tbl_lsm"><%= sortable 'entry_ts', 'Date/Time' %></th>
+	  <th class="tbl_lsm"><%= sortable 'entry_ts', 'Time' %></th>
 	  <th class="tbl_md">
 	  <% if @docs.present? && @docs.size > 1 %>
           <span class="dropdown" >
@@ -33,12 +33,10 @@
           <th class="tbl_md">Services</th>
           <th class="tbl_sm">B.Typ</th>
           <th class="tbl_lsm">Status</th>
+	  <th class="tbl_sm">Lbl</th> 
 	  <% if date == Date.today || date.blank? %>
-	    <th class="tbl_sm"></th>
             <th class="tbl_sm"></th>
             <th class="tbl_sm"></th>
-   	  <% else %>
-	    <th class="tbl_sm"></th>    <!-- Label -->
 	  <% end %>
 	  <% if current_user.admin? %>
 	    <th class="tbl_sm"></th>  <!-- Delete -->
