--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -9,16 +9,16 @@
 	<td><%= patient.hin_expiry_short %> </td>
 	<td><%= patient.dob %> </td>
 	<td><%= num_to_phone(patient.phone) %> </td> 
+        <td><%= link_to '<i class="glyphicon glyphicon-envelope"></i>'.html_safe, addrlabel_patient_path(patient), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %></td>
 	<td>
 	<% if patient.chart_file.present? %>
 	  <%= link_to '<i class="glyphicon glyphicon-copy"></i>'.html_safe, chart_patient_path(patient), target: 'Label' %>
 	<% end %>
 	</td>
 
-<td><%= link_to '<i class="glyphicon glyphicon-envelope"></i>'.html_safe, addrlabel_patient_path(patient), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %></td>
 
   	<% if current_user.admin?  %>
-		<td>  <%= link_to "delete", patient, method: :delete, data: { confirm: "Are you sure you want to delete #{patient.lname}?" } %>  </td> 
+		<td>  <%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, patient, method: :delete, data: { confirm: "Are you sure you want to delete #{patient.lname}?" } %>  </td> 
 	<% end %>
 
      </tr>
