--- a/app/views/paystubs/_paystub.html.erb
+++ b/app/views/paystubs/_paystub.html.erb
@@ -1,24 +1,25 @@
 <tr>
-<% if paystub.filespec.blank? %>
-  <td><%= link_to paystub.id, paystub, target: "Form" %></td>
+<% if paystub.filespec.present? && File.exists?(paystub.filespec) %>
+  <td><%= link_to paystub.id, paystub_path(paystub),  remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
 <% else %>
-  <td><%= link_to paystub.id, show_pdf_paystub_path(paystub), target: "Form" %></td>
+  <td><%= paystub.id %></td>
 <% end %>
 <td><%= paystub.doctor.lname %></td>
 <td><%= "#{paystub.month}/#{paystub.year}" %></td>
+
+<% if paystub.filespec.present? && File.exists?(paystub.filespec) %>
+  <td><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_paystub_path(paystub)  %></td>
+<% else %> <!-- regenerate paystub -->
+  <td><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_paystub_path(paystub)  %></td>
+<% end %>
+
 <td><%= paystub.claims %></td>
 <td><%= paystub.services %></td>
 <td><%= sprintf("$%.2f",paystub.gross_amt) %></td>
 <td><%= sprintf("$%.2f",paystub.net_amt) %></td>
-<td><%= sprintf("$%.2f",paystub.ohip_amt) %></td>
-<td><%= sprintf("$%.2f",paystub.cash_amt) %></td>
-<td><%= sprintf("$%.2f",paystub.monthly_premium_amt) %></td>
-<td><%= sprintf("$%.2f",paystub.ifh_amt) %></td>
-<td><%= sprintf("$%.2f",paystub.wcb_amt) %></td>
-<td><%= sprintf("$%.2f",paystub.hc_dep_amt) %></td>
 <td><%= paystub.ra_file %></td>
 <% if current_user.admin?  %>
-	<td><%= link_to "Delete", paystub_path(paystub), method: :delete, data: { confirm: "Are you sure you want to delete paystub #{paystub.id} for doctor #{paystub.doctor.lname}" } %></td>
+	<td><%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, paystub_path(paystub), method: :delete, data: { confirm: "Are you sure you want to delete paystub #{paystub.id} for doctor #{paystub.doctor.lname}" } %></td>
 <% end %>
 </tr>
 
