--- a/app/views/paystubs/index.html.erb
+++ b/app/views/paystubs/index.html.erb
@@ -1,21 +1,17 @@
 <% provide(:title, 'All Pay Stubs') %>
+<%= render 'shared/modal' %>
 
 <table class="tbl table-hover">  <!--table table-hover table-condensed" >  -->
   <thead>
       <tr>
-          <th class="tbl_sm">PS#</th>
+          <th class="tbl_sm">#</th>
           <th>Doctor</th>
           <th>Mon/Yr</th>
+	  <th>Download</th>
 	  <th class="tbl_lsm">#Claims</th>
 	  <th class="tbl_lsm">#Services</th>
           <th>Total Gross</th>
           <th>Total Net</th>
-          <th>Ohip Amt</th>
-          <th>Cash Amt</th>
-          <th>Mon Prm</th>
-          <th>IFH Amt</th>
-          <th>WCB Amt</th>
-          <th>HC Dep</th>
           <th>RA File</th>
 	   <% if current_user.admin?  %>
           <th></th>
