--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,18 +1,22 @@
     <tr>
-	<td><%= report.id %></td>
+	<% if report.filespec.present? && File.exists?(report.filespec) %>
+	  <td><%= link_to report.id, report_path(report), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+	<% else %>
+	  <td><%= report.id %></td>
+	<% end %>  
 	<td><%= report.doctor.lname rescue 'All' %> </td> 
 	<td><%= report.name %> </td>
 	<% if report.filespec.present? && File.exists?(report.filespec) %>
-<!-- link_to report.name, show_pdf_report_path(report), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window' -->
-	  <td><%= link_to 'Download', show_pdf_report_path(report)  %></td>
+	  <td><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_report_path(report)  %></td>
 	  <td><%= report.filesize %> </td>
-	<% else %>
-	  <td>Missing</td>
+        <% else %> <!-- regenerate report -->
+	  <td><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_report_path(report)  %></td>
 	  <td></td>
   	<% end %>
 
 	<td><%= report.type_str %></td>
 	<td><%= report.timeframe_str %></td> 
+	
 	<td>
 	<% if report.timeframe == DAILY_REPORT %>
 		<%= "#{report.sdate}" %>
@@ -21,8 +25,10 @@
 	<% end %>
 	</td>
 
+	<td><%= report.created_at %></td>
+
   	<% if current_user.admin?  %>
-		<td> <%= link_to "delete", report, method: :delete, data: { confirm: "Are you sure you want to delete #{report.name}?" } %> </td>
+	   <td> <%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, report, method: :delete, data: { confirm: "Are you sure you want to delete #{report.name}?" } %> </td>
 	<% end %>
 
      </tr>
