--- a/app/views/reports/_show.html.erb
+++ b/app/views/reports/_show.html.erb
@@ -8,11 +8,15 @@
 	<b class="modal-title" id="myModalLabel"><%= @doctor.lname %>: Claims Report for <%= @report.sdate %></b>
 </div>
 <div class="modal-body">
-	<embed id="myModal" src="/uploads/doc_report.pdf" frameborder="0" width="100%" height="600px">
+	<iframe id="myModal" src="/reports/<%= @report.filename %>" frameborder="0" width="100%" height="600px"></iframe>
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
 </div>
 
-
+<script language="javascript" type="text/javascript">
+    $(document).ready(function() {
+        getElementById('myModal').contentDocument.location.reload();
+    )};
+</script>
 
