--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -5,16 +5,17 @@
 <table class="tbl table-hover">  <!--table table-hover table-condensed" >  -->
   <thead>
       <tr>
-	  <th><%= sortable 'id', '#' %></th>
+	  <th class='tbl_sm'><%= sortable 'id', '#' %></th>
 	  <th><%= sortable 'doc_id', 'Doctor' %></th>
-          <th>Report</th>
-          <th>Link</th>
-	  <th>Size(M) </th>
+          <th class='tbl_lmd'>Report</th>
+          <th class='tbl_md'>Download</th>
+	  <th class='tbl_md'>Size(M) </th>
 	  <th><%= sortable 'rtype', 'Type' %></th>
           <th>Timeframe</th>
-	  <th><%= sortable 'sdate', 'Date' %></th>
+	  <th cless='tbl_llg'><%= sortable 'sdate', 'Date Range' %></th>
+	  <th><%= sortable 'created_at', 'Created' %></th>
 	   <% if current_user.admin?  %>
-          <th></th>
+          <th class='tbl_sm'></th>
 	  <% end %>
       </tr>
   </thead>
