--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,12 +1,17 @@
 <% if object.errors.any? %>
-  <div id="error_explanation"> 
-<!--    <div class="alert alert-danger">
-      The form contains <%= pluralize(object.errors.count, "error") %>.
-    </div>
--->    <ul>
-    <% object.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
+	  <div class="col-sm-10 col-md-10 col-sm-offset-1 col-md-offset-1 padding-0">
+	<div id="error_explanation" class='card bg-danger'>
+    <div class="card-body">
+    <% object.errors.keys.each do |attr| %>
+	<div class="row">
+		<span class="card-text"><i class="glyphicon glyphicon-exclamation-sign"></i>&nbsp;<%= object.errors.full_messages_for(attr).first %></span>
+        </div>
     <% end %>
-    </ul>
-  </div>
+    </div>
+</div>
+	</div>
+<div class="col-sm-12 col-md-12 col-sm-offset-1 col-md-offset-1">
+<div class="spacer-20"></div>
+</div>
 <% end %>
+
